--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@tabler/icons-react": "^3.2.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.3.0",
     "yup": "^1.4.0"
   },
